fix top padding of sections so that nav doesn't overlap

--- a/app/assets/stylesheets/base/_settings.scss
+++ b/app/assets/stylesheets/base/_settings.scss
@@ -1,2 +1,7 @@
+// Document
 $max-width:   1200px;
 $page-gutter: 1em;
+
+// Sections
+$section-top-padding:    2.5em;
+$section-bottom-padding: 2em;
