--- a/app/assets/stylesheets/modules/_share.scss
+++ b/app/assets/stylesheets/modules/_share.scss
@@ -1,3 +1,3 @@
 .m-share {
-  padding: 2em 0;
+  padding: $section-top-padding 0 $section-bottom-padding;
 }
